Codigo/TrabFinGrado/src/lecturaDatos/LecturaDatos.java
/* Generated By:JavaCC: Do not edit this line. LecturaDatos.java */
package lecturaDatos;

import java.io.*;
import java.util.*;

public class LecturaDatos implements LecturaDatosConstants {
  //Fichero del que se extraen los datos
  public final static String path = "C:\u005c\u005cbisdev_jira_com.html";

  public static void main(String args []) throws ParseException
  {
    System.out.println("Acaba de empezar el main");
    //Se abre el fichero
    try {
      BufferedReader buf = new BufferedReader(new FileReader (path));

      //Se crea el parser
      LecturaDatos parser = new LecturaDatos(buf);

          //Se empieza a leer el fichero
          parser.leer_head();
          //Obtencion del número de incidencias que hay
          int incidencias = parser.leer_body();
          //Obtencion de las cabeceras de la tabla
          String [] cab = parser.leerCabecera();
          //Se empiezan a leer los atributos de las incidencias
          parser.leerContenido();


          //Se cierra el fichero
          System.out.println("Se cierra el fichero");
          buf.close();
    }
    catch(Exception e) {
                System.out.println("Exception " + e.getMessage());
        }
  }

  static final public void saltar() throws ParseException {
    System.out.println("He entrado en saltar");
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        jj_consume_token(CARACTERES);
        break;
      case ETIQUETA:
        jj_consume_token(ETIQUETA);
        break;
      case ETIQUETA_FIN:
        jj_consume_token(ETIQUETA_FIN);
        break;
      case NUMEROS:
        jj_consume_token(NUMEROS);
        break;
      case IMG:
        jj_consume_token(IMG);
        break;
      case A_HREF:
        jj_consume_token(A_HREF);
        break;
      case STRONG:
        jj_consume_token(STRONG);
        break;
      case STRONG_FIN:
        jj_consume_token(STRONG_FIN);
        break;
      case TD_FIN:
        jj_consume_token(TD_FIN);
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMEROS:
      case ETIQUETA:
      case ETIQUETA_FIN:
      case CARACTERES:
      case TD_FIN:
      case A_HREF:
      case IMG:
      case STRONG:
      case STRONG_FIN:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
    }
  }

  static final public void leer_head() throws ParseException {
   System.out.println("Principio de leer_head");
    jj_consume_token(HTML);
    jj_consume_token(HEAD);
    jj_consume_token(TITLE);
    jj_consume_token(CARACTERES);
    jj_consume_token(TITLE_FIN);
    jj_consume_token(STYLE);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    saltar();
    jj_consume_token(STYLE_FIN);
    jj_consume_token(META);
    saltar();
    jj_consume_token(STYLE_FIN);
    saltar();
    jj_consume_token(HEAD_FIN);
   System.out.println("Fin de leer_head");
  }

  static final public int leer_body() throws ParseException {
                   int n;
   System.out.println("Principio de leer_body");
    jj_consume_token(BODY);
    jj_consume_token(TABLA_INICIO);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    jj_consume_token(TR_BG);
    jj_consume_token(TD_COL);
    jj_consume_token(IMG);
    saltar();
    jj_consume_token(TR_FIN);
    jj_consume_token(TR);
    jj_consume_token(TD_COL);
    jj_consume_token(A_HREF);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    jj_consume_token(CARACTERES);
    jj_consume_token(A_FIN);
    jj_consume_token(TD_FIN);
    jj_consume_token(TR_FIN);
    jj_consume_token(TR);
    jj_consume_token(TD_COL);
    jj_consume_token(CARACTERES);
    jj_consume_token(STRONG);
    n = numero();
    jj_consume_token(STRONG_FIN);
    saltar();
    jj_consume_token(TR_FIN);
    jj_consume_token(TABLA_FIN);
   System.out.println("El numero de incidencias es:");System.out.println(n);
  {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  static final public String[] leerCabecera() throws ParseException {
  String [] cabecera= new String [58];
  int i=0;
  String nombre="", n1;
   System.out.println("Empieza la cabecera de la tabla");
    jj_consume_token(TABLA_INICIO);
    saltar();
    jj_consume_token(THEAD);
    jj_consume_token(TR_CLASS);
    label_2:
    while (true) {
      jj_consume_token(TH_CLASS);
      jj_consume_token(CARACTERES);
      jj_consume_token(CARACTERES);
      jj_consume_token(ETIQUETA_FIN);
      nombre = cadena();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CARACTERES:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        n1 = cadena();
                                  nombre +=" " + n1;
      }
   cabecera[i]=nombre; i++;
      jj_consume_token(TH_FIN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TH_CLASS:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
    }
    jj_consume_token(TR_FIN);
    jj_consume_token(THEAD_FIN);
    jj_consume_token(TBODY);
   System.out.println("Se ha terminado de leer la cabecera");
  {if (true) return cabecera;}
    throw new Error("Missing return statement in function");
  }

  static final public void leerContenido() throws ParseException {
                       String n="", n1, cadena=""; int num;
   System.out.println("Se ha entrado en leerContenido");
    jj_consume_token(TR_BODY);
    saltar();
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      n1 = cadena();
                                                              n +=" " + n1;
    }
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    jj_consume_token(A_CLASS);
    label_5:
    while (true) {
      jj_consume_token(CARACTERES);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
    }
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_6;
      }
      n1 = cadena();
                                        n +=" " + n1;
    }
    jj_consume_token(A_FIN);
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    jj_consume_token(P);
    n = cadena();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_7;
      }
      n1 = cadena();
                                                                 n +=" " + n1;
    }
    jj_consume_token(P_FIN);
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_8;
      }
      n1 = cadena();
                                                              n +=" " + n1;
    }
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    jj_consume_token(SPAN);
    label_9:
    while (true) {
      jj_consume_token(CARACTERES);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_9;
      }
    }
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_10;
      }
      n1 = cadena();
                          n +=" " + n1;
    }
    jj_consume_token(SPAN_FIN);
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_11;
      }
      n1 = cadena();
                                                              n +=" " + n1;
    }
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_12;
      }
      n1 = cadena();
                                                              n +=" " + n1;
    }
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_13;
      }
      n1 = cadena();
                                                              n +=" " + n1;
    }
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_14;
      }
      n1 = cadena();
                                                              n +=" " + n1;
    }
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_15;
      }
      n1 = cadena();
                                                              n +=" " + n1;
    }
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_16:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_16;
      }
      n1 = cadena();
                                                              n +=" " + n1;
    }
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_17:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_17;
      }
      n1 = cadena();
                                                              n +=" " + n1;
    }
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_18:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_18;
      }
      n1 = cadena();
                                                              n +=" " + n1;
    }
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_19:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_19;
      }
      n1 = cadena();
                                                              n +=" " + n1;
    }
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_20:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_20;
      }
      n1 = cadena();
                                                              n +=" " + n1;
    }
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_21:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_21;
      }
      n1 = cadena();
                                                              n +=" " + n1;
    }
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_22:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_22;
      }
      n1 = cadena();
                                                              n +=" " + n1;
    }
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    n = cadena();
    label_23:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARACTERES:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_23;
      }
      n1 = cadena();
                                                              n +=" " + n1;
    }
    jj_consume_token(TD_FIN);
   cadena+= n; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    num = numero();
    jj_consume_token(TD_FIN);
   cadena+= num; cadena+=", ";
    jj_consume_token(TD_CLASS);
    jj_consume_token(CARACTERES);
    jj_consume_token(ETIQUETA_FIN);
    num = numero();
    jj_consume_token(TD_FIN);
   cadena+= num; cadena+=", ";
    jj_consume_token(TD_CLASS);
